# ai-toolkit

./: .cursorrules  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run_toolkit.py  system_diagram.md  test_project_structure.py  toolkit_architecture.md
.cursor/rules/: ai-native-development.mdc
docs/: AI Coder Roadmap.md  AI Coder System Architecture.md  AI Native Dev Toolkit - Future.md  AI Native Development Principles.md  AI Native Development Rules.md  AI Native Toolkit Project Brief.md  agent_system.md  agent_system_architecture.md
scripts/: install.sh  manual_setup.sh  migrations.sh
src/ai_toolkit/: __init__.py
src/ai_toolkit/agents/: __init__.py  base.py  code_agent.py  coordinator.py  test_agent.py
src/ai_toolkit/cli/: main.py
src/ai_toolkit/cli/commands/: agent.py  analyze.py  init.py  query.py  visualize.py
src/ai_toolkit/config/: __init__.py  config.json
src/ai_toolkit/docs/: README.md
src/ai_toolkit/kb/: component.py  graph.py  relationship.py  storage.py
src/ai_toolkit/parser/: __init__.py  dependency.py  extractor.py  python.py
src/ai_toolkit/viz/: formats.py  mermaid.py
tests/: test_parser.py
tests/test_parser/: test_dependency_analyzer.py  test_function_calls.py
