[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-toolkit"
version = "0.1.0"
description = "AI-Native Development Toolkit"
readme = "README.md"
authors = [
    {name = "AI-Native Development Team", email = "example@example.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
ai-toolkit = "ai_toolkit.cli.main:main"

[tool.setuptools]
packages = ["ai_toolkit"]
package-dir = {"" = "src"}

[project.urls]
"Homepage" = "https://github.com/yourusername/ai-toolkit"
"Bug Tracker" = "https://github.com/yourusername/ai-toolkit/issues" 